--- a/app/views/layouts/main.rhtml
+++ b/app/views/layouts/main.rhtml
@@ -12,11 +12,11 @@
 <body>
 <div id="topPanel">
 <ul>
-<li><a href="#">Contact</a></li>
-<li><a href="#">Clients</a></li>
-<li><a href="#"> Support</a></li>
-<li><a href="#">About us</a></li>
-<li class="active">Home</li>
+<li><a href="#">Contactos</a></li>
+<li><a href="#">Clientes</a></li>
+<li><a href="#"> Supporte</a></li>
+<li><a href="#">Acerca de nosotros</a></li>
+<li class="active">Principal</li>
 </ul>
 <a href="index.html"><img src="images/logo.gif" title="Trial Services" alt="Trial Services" width="230" height="80" border="0" /></a>
 <div id="headerPanelfast">
