redireccion del logo

--- a/app/views/layouts/main.rhtml
+++ b/app/views/layouts/main.rhtml
@@ -18,7 +18,7 @@
 <li><a href="#">About us</a></li>
 <li class="active">Home</li>
 </ul>
-<a href="index.html"><img src="images/logo.gif" title="Trial Services" alt="Trial Services" width="230" height="80" border="0" /></a>
+<a href="index.html"><%= image_tag("logo.gif", :border => "0")%><!--<img src="images/logo.gif" title="Trial Services" alt="Trial Services" width="230" height="80" border="0" />--></a>
 <div id="headerPanelfast">
 	<h2>design</h2>
 	<p>Lorem Ipsum is simply try's standard dummy text ever since the 1500s,Lorem Ipsimply try's </p>
