redireccionamineto de imagenes concluido

--- a/app/views/layouts/main.rhtml
+++ b/app/views/layouts/main.rhtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Trial Services</title>
+<title>Wibo SRL</title>
 
 <!-- START:stylesheet -->
   <%= stylesheet_link_tag "style", :media => "all" %>
@@ -14,24 +14,24 @@
 <ul>
 <li><a href="#">Contactos</a></li>
 <li><a href="#">Clientes</a></li>
-<li><a href="#"> Supporte</a></li>
-<li><a href="#">Acerca de nosotros</a></li>
+<li><a href="#"> Suporte</a></li>
+<li><a href="#">Acerca de</a></li>
 <li class="active">Principal</li>
 </ul>
 <a href="index.html"><%= image_tag "logo.gif", :border=> "0" %></a>
 <div id="headerPanelfast">
-	<h2>design</h2>
-	<p>Lorem Ipsum is simply try's standard dummy text ever since the 1500s,Lorem Ipsimply try's </p>
+	<h2>Diseño</h2>
+	<p>Tus objetivos nuestras metas</p>
 	<a href="#">
 &nbsp;	</a></div>
 <div id="headerPanelsecond">
-	<h2>success</h2>
-	<p>Lorem Ipsum is simply try's standard dummy text ever since the 1500s,Lorem Ipsimply try's </p>
+	<h2>Proyectos</h2>
+	<p>Desarrollamos tus sueños </p>
 	<a href="#">
 &nbsp;	</a></div>
 <div id="headerPanelthird">
-	<h2>services</h2>
-	<p>Lorem Ipsum is simply try's standard dummy text ever since the 1500s,Lorem Ipsimply try's </p>
+	<h2>Servicios</h2>
+	<p>Hospedaje web y mucho mas </p>
 	<a href="#">
 &nbsp;	</a></div>
 </div>
