--- a/app/views/main/contactos.html.erb
+++ b/app/views/main/contactos.html.erb
@@ -13,10 +13,9 @@
    </div>
    <div>Telefono: (434)(44) 434527593 <br /></div>
  
- <%= form_tag :action => 'create' %>
-  <%= render :partial => 'form' %>
-  <%= submit_tag 'Create' %>
-<%= form_tag %>
+ 
+  <%= render :partial => 'form_contact' %>
+ 
 
  
  
