estructura basica wibo y navegacion completada

--- a/app/views/main/empresa.html.erb
+++ b/app/views/main/empresa.html.erb
@@ -1,1 +1,20 @@
-wibo empresa
+<h3>Nosotros</h3>
+<div id="testimonial">
+	<p><span>Analizar y desarrollar software para PYMES, adaptado a cada una de estas empresa, de aceptable
+calidad y con un moderado costo de desarrollo. Desarrollar una empresa que soñamos, constituirá dentro de poco el Backbone de otras muchas
+semejantes.</span></p>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+	
+	
