--- a/app/views/main/noticias.html.erb
+++ b/app/views/main/noticias.html.erb
@@ -1,1 +1,9 @@
-noticias wibo
+<h3>Noticias Tecnologicas</h3>
+	<span></span>
+	<p class="dotline"><img src="images/blank.gif" alt="" width="1" height="1" /></p>
+	<p class="capstext"></p>
+	<p class="moretwo2"><a href="#">MAS</a></p>
+	<br><br>
+	<p class="dotline"><img src="images/blank.gif" alt="" width="1" height="1" /></p>
+	<br><br>
+	<p class="moretwo2"><a href="#">MAS</a></p>
