--- a/app/views/main/contactos.html.erb
+++ b/app/views/main/contactos.html.erb
@@ -14,7 +14,11 @@
    <div>Telefono: (434)(44) 434527593 <br /></div>
  
  
+ <%= form_tag :action => 'new_contact' %>
   <%= render :partial => 'form_contact' %>
+  <%= submit_tag 'enviar' %>
+<%= form_tag %>
+
  
 
  
