--- a/app/views/contactos/index.html.erb
+++ b/app/views/contactos/index.html.erb
@@ -1,21 +1,14 @@
-
-
 <div id="bodyPanel">
-<h2>contactanos</h2>
-   <div>Oficinas en Bolivia </div>
-   <div>Av. Ayacucho nro. 465<br />
-        Edificio Rosario, <br />
-		Oficina nro. 210, <br />
-        Cochabamba</div>
-   <div>Telefono: (591)(4) 4527593 <br />
-        Email: contactos@wibo.com.bo</div>
-  
-   <div>Oficinas en Alemania </div>
-   <div>3003 Summit Blvd.,<br />
-        Suite 1500, <br />							             
-   </div>
-   <div>Telefono: (434)(44) 434527593 <br /></div>
+	
+	<p class="dotline"><img src="images/blank.gif" alt="" width="1" height="1" /></p>
 
-<%= render :partial => "new_contacto" , :locals => {:contacto => Contacto.new}%>
+	<%= render :partial => "new_contacto" , :locals => {:contacto => Contacto.new}%>
+<div id="testimonial">
+	<p><span>Edificio Rosario, segundo piso </span><br> oficina # 210 Cochabamba. <br>
+	Telefono: (591)4-4527593 <br>Email: contactos@wibo.com.bo</p>
+	
 </div>
+</div>
+
+
 
