--- a/app/views/contactos/_new_contacto.html.erb
+++ b/app/views/contactos/_new_contacto.html.erb
@@ -1,5 +1,5 @@
    <h4>Contacto</h4>
-   <% form_for (contacto, :url=> {:action=>'index'}) do |f|%>
+   <% form_for (contacto, :url=> {:action=>'save'}) do |f|%>
         <ul>
             <li>Nombre: <%= f.text_field :name, :size => 15 %></li>
             <li>Telefono: <%= f.text_field :phone, :size => 15 %></li>
