--- a/app/views/layouts/main.rhtml
+++ b/app/views/layouts/main.rhtml
@@ -20,7 +20,7 @@
 <li class="active"><a href="/empresa">Empresa</a></li>
 <li class="active"><a href="/">Inicio</a></li>
 </ul>
-<%= image_tag "logo_wibo.png", :border=> "0" %>
+<%= image_tag "logo_w.png", :border=> "0" %>
 <div id="headerPanelfast">
 	<h2>Proyectos</h2>
 	<p>Tus objetivos nuestras metas</p>
