--- a/app/views/layouts/main.rhtml
+++ b/app/views/layouts/main.rhtml
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Wibo SRL</title>
 
-<!-- START:stylesheet -->
+<!-- START:stylesheet js-->
   <%= stylesheet_link_tag "style", :media => "all" %>
 <!-- END:stylesheet -->
 </head>
