--- a/app/views/contactos/_new_contacto.html.erb
+++ b/app/views/contactos/_new_contacto.html.erb
@@ -1,6 +1,6 @@
 <h3>Contacto</h3>   
   	
-<% form_for (contacto, :url=> {:action=>'save'}) do |f|%>
+<% form_for (contacto, :url=> {:action=>'guardar'}) do |f|%>
   
 	<div id="contactosPanel">	    	
 	<ul> 	
