se adiciono algunos logos de los clientes

--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -1,2 +1,9 @@
 <h3>Nuestro Clientes</h3>
 
+	
+	<center><img src="images/Carbonazo.png" alt="" width="200" height="200"/>
+	<img src="images/templocalacala.jpg" alt="" width="200" height="200"/></center>
+
+	
+
+
