--- a/app/views/servicios/index.html.erb
+++ b/app/views/servicios/index.html.erb
@@ -7,6 +7,6 @@ servicios
 	<tr><td><center>2.- Alojamiento de Paginas WEB</center></td></tr>
 	
 	
-	<tr><td><center>3.- Diseño  y Desarrollo WEB</center></td></tr>
+	<tr><td><center>3.- Aplicaciones Web</center></td></tr>
 	
 	</table>
