--- a/app/views/contactos/index.html.erb
+++ b/app/views/contactos/index.html.erb
@@ -5,7 +5,7 @@
 	<%= render :partial => "new_contacto" , :locals => {:contacto => Contacto.new}%>
 <div id="testimonial">
 	<p><span>Edificio Rosario, segundo piso </span><br> oficina # 210 Cochabamba. <br>
-	Telefono: (591)4-4527593 <br>Email: contactos@wibo.com.bo</p>
+	Telefono: (591)4-4527593 <br>Email: info@wibo.com.bo</p>
 	
 </div>
 </div>
