--- a/app/views/contactos/index.rhtml
+++ b/app/views/contactos/index.rhtml
@@ -6,7 +6,7 @@
        
 <div id="testimonial">
 	<p><span>Edificio Rosario, segundo piso </span><br> oficina # 210 Cochabamba. <br>
-	Telefono: (591)4-4527593 <br>Email: contactos@wibo.com.bo</p>
+	Telefono: (591)4-4527593 <br>Email: info@wibo.com.bo</p>
 	
 </div>
 </div>
