se mejoro la parte de proyectos

--- a/app/views/proyectos/index.html.erb
+++ b/app/views/proyectos/index.html.erb
@@ -5,12 +5,12 @@
 <td><center><b>Proyectos Realizados</b></center></td><td><center><b>Descripcion</b></center></td><td><center><b>Imagen</b></center></td>
 </tr>
 <tr>
-<td>1.- Graficador de Perfil de Pozos</td><td>Consiste en graficar pozos dados ciertos parametros los cuales se recuperan de una base de datos. Realizado para la Unidad de Explotacion de Recursos Hidricos, para la perforacion de pozos. </td><td>xxx</td>
+<td>1.- Graficador de Perfil de Pozos</td><td>Consiste en graficar pozos dados ciertos parametros los cuales se recuperan de una base de datos. Realizado para la Unidad de Explotacion de Recursos Hidricos, para la perforacion de pozos. </td><td><img src="images/pozo.jpg" alt="" width="120" height="120"/></td>
 </tr>
 <tr>
-<td>2.- Procesamiento digital de video para la detección de eventos remotos con envió y control de respuestas</td><td>El proyecto consiste en el diseño e implementación de un sistema útil para poder detectar movimiento en cámaras que no tengan por si mismos esa capacidad. El sistema fue desarrollado para la cadena de Tiendas "Baroni".</td><td>xxxx</td>
+<td>2.- Procesamiento digital de video para la detección de eventos remotos con envió y control de respuestas</td><td>El proyecto consiste en el diseño e implementación de un sistema útil para poder detectar movimiento en cámaras que no tengan por si mismos esa capacidad. El sistema fue desarrollado para la cadena de Tiendas "Baroni".</td><td><img src="images/camara.jpg" alt="" width="120" height="120"/></td>
 </tr>
 <tr>
-<td>3.- Sistema de Registro de Historias Clínicas para PDA's</td><td>El sistema esta desarrollado de dispositivos moviles (PDA's) que cuentas con sistema operativos windows mobile, el cual hace el registro de las historias clincias de los pacientes y despues enviada inalambricamente hacia una central. Desarrollado para la clínica Particular "Miraflores".</td><td>xxxxx</td>
+<td>3.- Sistema de Registro de Historias Clínicas para PDA's</td><td>El sistema esta desarrollado de dispositivos moviles (PDA's) que cuentas con sistema operativos windows mobile, el cual hace el registro de las historias clincias de los pacientes y despues enviada inalambricamente hacia una central. Desarrollado para la clínica Particular "Miraflores".</td><td><img src="images/historia_clinica.png" alt="" width="120" height="50"/></td>
 </tr>
 </table>
