--- a/app/views/servicios/index.html.erb
+++ b/app/views/servicios/index.html.erb
@@ -1,12 +1,12 @@
 servicios
 	<table>
 	
-	<tr><td><center>1.- Diseño  y Desarrollo WEB</center></td></tr>
+	<tr><td>1.-</td><td>Diseño  y Desarrollo WEB</td></tr>
 	
 	
-	<tr><td><center>2.- Alojamiento de Paginas WEB</center></td></tr>
+	<tr><td>2.-</td><td>Alojamiento de Paginas WEB</td></tr>
 	
 	
-	<tr><td><center>3.- Aplicaciones Web</center></td></tr>
+	<tr><td>3.-</td><td>Aplicaciones Web</td></tr>
 	
 	</table>
